# ocr-real-time

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/api/: MssCapture.md
ocr_real_time/: Capture.py  CaptureBase.py  Screenshots.py
tests/: test_screenshot.py
